# plainews

./: .gitignore  FEED_RECOMMENDATIONS.md  LICENSE  LLM_SETTINGS.md  README.md  app.py  article_extraction.py  article_presentation.py  config.yml  feed_parser.py  logger.py  pyproject.toml
.github/workflows/: publish.yml
ai/: batch_summarize.py  llm.py  llm_summarize.py  llm_translate.py  tts.py
config/: config.py
config_examples/: ollama_config.yml  openai_config.yml
model/: article.py  article_extraction.py  article_version.py  feed.py  feed_manager.py  feed_parser.py  feed_pipeline.py  latest_articles.py  opml.py  session.py  session_manager.py
model/tests/: test_feed_manager.py
plainews/: app.py
storage/: config_dir.py  stored_articles.py  stored_feeds.py  stored_session.py
storage/tests/: test_storage.py
transform/: article_summary.py  article_transformer.py  article_translator.py  transformation_builder.py
ui/: __init__.py  article_layout.tcss  article_screen.py  article_view.py  articles_list.py  config_file_screen.py  config_file_view.py  feeds_list.py  feeds_list.tcss  home.py  home_layout.tcss  latest_articles_screen.py  latest_articles_view.py  latest_articles_view.tcss  reader_view.py  reader_view.tcss
