[tool.poetry]
name = "plainews"
version = "0.1.0"
description = "Distraction and clutter free reading"
authors = ["Nikola <nikola@kumulintelligence.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
newspaper3k = "^0.2.8"
lxml_html_clean = "^0.2.0"
pydantic = "^2.9.1"
feedparser = "^6.0.11"
rich = "^13.8.0"
litellm = "^1.44.24"
pydantic-settings = "^2.5.2"
textual = "^0.80.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
textual-dev = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/nsobadzhiev/plainews"
Issues = "https://github.com/nsobadzhiev/plainews/issues"

[project]
name = "plainews"
version = "0.1.0"
authors = [
  { name="Nikola Sobadjiev", email="nikola@kumulintelligence.com" },
]
description = "Distraction and clutter free reading"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]

[project.scripts]
app_name = "app"
