[tool.poetry]
name = "plainews"
version = "0.5.0"
description = "Distraction and clutter free reading"
authors = ["Nikola <nikola@kumulintelligence.com>"]
readme = "README.md"

packages = [
    { include = "plainews", from = "." },
    { include = "ui", from = "." },
    { include = "config", from = "." },
    { include = "ai", from = "." },
    { include = "model", from = "." },
    { include = "transform", from = "." },
    { include = "storage", from = "." },
]

[tool.poetry.dependencies]
python = "^3.12"
newspaper3k = "^0.2.8"
lxml_html_clean = "^0.2.0"
pydantic = "^2.10.4"
feedparser = "^6.0.11"
rich = "^13.9.4"
litellm = "^1.56.10"
pydantic-settings = "^2.7.1"
textual = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
textual-dev = "^1.7.0"

[tool.poetry.scripts]
plainews = "plainews.app:run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/nsobadzhiev/plainews"
Issues = "https://github.com/nsobadzhiev/plainews/issues"

[project]
name = "plainews"
version = "0.5.0"
authors = [
  { name="Nikola Sobadjiev", email="nikola@kumulintelligence.com" },
]
description = "Distraction and clutter free reading"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]
